# ImageLoaderPlugin

./: .gitignore  CMakeLists.txt  PluginInfo.json  README.md  conanfile.py  vcpkg.json
.github/actions/action-conan-linux-build/: action.yml
.github/actions/action-conan-windows-build/: action.yml
.github/workflows/: build.yml
New folder/: conanfile.py
cmake/: FindFreeImage.cmake
cmake/Modules/: FindFreeImage.cmake
data/images/stack/128x128/: l1600.tif
data/images/stack/32x32/: l0193.tif  l0304.tif  l0335.tif
data/images/stack/64x64/: l0335.tif  l_HMI_cont_aiascale.tif  l_HMImag.tif
data/images/stack/sun/: l0094.tif  l0131.tif  l0171.tif  l0193.tif  l0211.tif  l0304.tif  l0335.tif  l1600.tif  l1700.tif  l_HMI_cont_aiascale.tif  l_HMImag.tif
data/images/stack/sun/128x128/: l0094.tif  l0193.tif  l0211.tif  l1700.tif  l_HMImag.tif
data/images/stack/sun/32x32/: l0094.tif  l0131.tif  l0211.tif
data/images/stack/sun/64x64/: l0094.tif  l0171.tif
data/images/stack/test/: 0.tif  100.tif  100bottom.tif  100left.tif  100right.tif  100top.tif  50.tif  50bottom.tif  50left.tif  50rightt.tif  50top.tif
data/images/toy/: toy_example.tif
src/: AddCoordinatesPointsAction.cpp  AddCoordinatesPointsAction.h  ColorSettings.cpp  ColorSettings.h  ColorSettingsWidget.cpp  ColorSettingsWidget.h  ColorSettingsWidget.ui  Common.h  CommonSettingsAction.cpp  CommonSettingsAction.h  CommonSettingsWidget.cpp  CommonSettingsWidget.h  CommonSettingsWidget.ui  ConversionAction.cpp  ConversionAction.h  DataLayoutAction.cpp  DataLayoutAction.h  DatasetNameAction.cpp  DatasetNameAction.h  DimensionTagAction.cpp  DimensionTagAction.h  FreeImage.cpp  FreeImage.h  GroupDataAction.cpp  GroupDataAction.h  ImageCollection.cpp  ImageCollection.h  ImageCollectionLoader.cpp  ImageCollectionLoader.h  ImageCollectionScanner.cpp  ImageCollectionScanner.h  ImageCollections.cpp  ImageCollections.h  ImageCollectionsAction.cpp  ImageCollectionsAction.h  ImageCollectionsLoader.cpp  ImageCollectionsLoader.h  ImageCollectionsModel.cpp  ImageCollectionsModel.h  ImageDataSet.cpp  (+115 more)
test/images/: toy_example.psd  toy_example.pxr  toy_example.tga  toy_example.tif
test/images/stack/128x128/: l0131.tif  l0171.tif  l0304.tif  l0335.tif  l_HMI_cont_aiascale.tif
test/images/stack/32x32/: l0171.tif  l1600.tif  l1700.tif  l_HMI_cont_aiascale.tif  l_HMImag.tif
test/images/stack/64x64/: l0131.tif  l0193.tif  l0211.tif  l0304.tif  l1600.tif  l1700.tif
